src/objects/Business_System_Role__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>It holds values for system role and business role for spe plan, scorecard, standalone survey, scorecard generator and consequence  management.</description>
    <fields>
        <fullName>Business_Role__c</fullName>
        <label>Business Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Role__c</fullName>
        <label>System Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Business and System Role</label>
</CustomObject>